# linux_distribute_monitor

./: CMakeLists.txt  README.md  docker_build.sh
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/display_monitor/: Makefile  cmake_install.cmake  display
cmake/display_monitor/display_autogen/: moc_predefs.h
cmake/grpc_manager/: Makefile  cmake_install.cmake
cmake/grpc_manager/client/: Makefile  cmake_install.cmake
cmake/grpc_manager/server/: Makefile  cmake_install.cmake  server
cmake/proto/: Makefile  cmake_install.cmake  cpu_softirqs.grpc.pb.cc  cpu_softirqs.grpc.pb.h  cpu_softirqs.pb.cc  cpu_softirqs.pb.h  monitor_info.pb.cc  monitor_info.pb.h  parsing_log.grpc.pb.cc  parsing_log.grpc.pb.h  parsing_log.pb.cc  parsing_log.pb.h
cmake/test_monitor/: Makefile  cmake_install.cmake  monitor
display_monitor/: CMakeLists.txt  cpu_load_model.cpp  cpu_load_model.h  cpu_softirq_model.cpp  cpu_softirq_model.h  cpu_stat_model.cpp  cpu_stat_model.h  main.cpp  mem_model.cpp  monitor_inter.h  monitor_widget.cpp  net_model.cpp
docker/scripts/: docker_into.sh  docker_run.sh  docker_stop.sh
grpc_manager/client/: CMakeLists.txt
grpc_manager/client/src/: grpc_client.cpp  main.cpp
grpc_manager/server/: CMakeLists.txt
grpc_manager/server/src/: grpc_manager.cpp  main.cpp
proto/: CMakeLists.txt  cpu_load.proto  cpu_softirqs.proto  monitor_info.proto  parsing_log.proto
test_monitor/: CMakeLists.txt
test_monitor/include/monitor/: cpu_loadavg_monitor.h  cpu_softirqs_monitor.h  cpu_stat_monitor.h  mem_monitor.h  monitor_interface.h  net_monitor.h  parsing_log.h
test_monitor/include/utils/: read_cmd.h  read_log.h  time_diff.h
test_monitor/src/monitor/: cpu_loadavg_monitor.cpp  cpu_softirqs_monitor.cpp  cpu_stat_monitor.cpp  mem_monitor.cpp  net_monitor.cpp  parsing_log.cpp
test_monitor/src/utils/: main.cpp  read_cmd.cpp  read_log.cpp
